# llmops-databricks-course-victor-kuznetsov

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  databricks.yml  pyproject.toml
.claude/commands/: run-notebook.md  ship.md  skill-llmops-commit-push.md  skill-llmops-start-issue.md
.github/: CODEOWNERS
config/input/: category_keywords.yml  keywords.yml  social_platforms.yml
config/output/: language_patterns.yml
docs/: CONTRIBUTING.md  CONVENTIONS.md  DECISIONS.md
docs/artlake/: ARCHITECTURE.md  BACKLOG.md  DATA_FLOW.md  DECISIONS.md  data_flow.md  high-level-architecture.excalidraw
resources/: categorise_job.yml  categorise_llm_job.yml  categorise_rules_job.yml  clean_events_job.yml  dedup_job.yml  download_artifacts_job.yml  generate_category_examples_job.yml  generate_language_patterns_job.yml  generate_queries_job.yml  geocode_job.yml  hello_world_job.yml  ingest_events_job.yml  scrape_pages_job.yml  search_social_job.yml  search_web_job.yml  translate_job.yml
src/artlake/: __init__.py  cli.py
src/artlake/artifacts/: download.py  enrich.py  extract.py
src/artlake/categorise/: examples.py  llm.py  rules.py
src/artlake/clean/: events.py  patterns.py
src/artlake/events/: categorise.py  enrich.py  extract_dates.py  geocode.py  scrape.py  translate.py
src/artlake/filter/: __init__.py  country.py  dedup.py
src/artlake/models/: __init__.py  config.py  event.py
src/artlake/process_artifacts/: __init__.py  extract.py
src/artlake/scrape/: download.py  pages.py
src/artlake/search/: __init__.py  generate.py  load.py  models.py  social.py  web.py
src/artlake/translate/: __init__.py  content.py
src/llmops_databricks_course_victor_kuznetsov/: __init__.py
tests/: __init__.py  functional_test_search_web.py  test_basic.py  test_categorise_examples.py  test_categorise_llm.py  test_categorise_rules.py  test_clean_events.py  test_clean_patterns.py  test_country_filter.py  test_dedup.py  test_enrich_artifacts.py  test_models.py  test_process_artifacts_extract.py  test_scrape_download.py  test_scrape_pages.py  test_search_queries.py  test_search_social.py  test_search_web.py  test_translate_content.py
tests/fixtures/: event_basic.html  event_no_title.html  event_with_pdf.html
